# maimai-score-control-tool

./: .env.template  .gitignore  CMakeLists.txt  README.md  fetch_sheets.py  requirements.txt  score_control.py  sheet_data.csv  versions.txt
src/: fetch_sheets.py  score_control.cc  score_control.py
